--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -21,5 +21,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="dotnet-format" />
+  </Target>
+
 
 </Project>
