--- a/WebService/.editorconfig
+++ b/WebService/.editorconfig
@@ -111,4 +111,4 @@ dotnet_style_qualification_for_field = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
 
 # CS1998: Async method lacks 'await' operators and will run synchronously
-dotnet_diagnostic.CS1998.severity = warning
+dotnet_diagnostic.CS1998.severity = suggestion
