--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,6 @@ jobs:
         dotnet-version: 3.1.x
     - name: Install formater
       run: dotnet tool install --global dotnet-format
-           PATH=$HOME/.dotnet/tools:$PATH
     - name: Run formater
       run: dotnet-format --check --verbosity diagnostic
 
@@ -34,6 +33,8 @@ jobs:
         dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Install formater
+      run: dotnet tool install --global dotnet-format
     - name: Build
       run: dotnet build --no-restore
 
