--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DatabaseSettings": {
+    "ConnectionString": "persistsecurityinfo=True;database=Timberyard;SslMode=none",
+    "DbServer": "",
+    "DbPassword": "",
+    "DbUsername": ""
+  },
   "AllowedHosts": "*"
 }
