change acceptance test to use Rest calls

--- a/AcceptanceTests/appsettings.json
+++ b/AcceptanceTests/appsettings.json
@@ -6,11 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "DatabaseSettings": {
-    "ConnectionString": "persistsecurityinfo=True;database=Timberyard;SslMode=none",
-    "DbServer": "",
-    "DbPassword": "",
-    "DbUsername": ""
+  "ClientCredentials": {
+    "Email": "someEmail@domain.com",
+    "Password": "secret"
+  },
+  "ServiceSettings": {
+    "Url": "http://urlurlurl"
   },
   "AllowedHosts": "*"
 }
