update all packages and add userCredentials changing option

--- a/AcceptanceTests/Properties/launchSettings.json
+++ b/AcceptanceTests/Properties/launchSettings.json
@@ -4,10 +4,9 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard;",
-        "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
-        "DatabaseSettings__DbPassword": "timberyard_service",
-        "DatabaseSettings__DbUsername": "timberyard_service"
+        "UserCredentials__Email": "tomer@ribbon.com",
+        "UserCredentials__Password": "password",
+        "ServiceSettings__Url": "localhost"
       }
     }
   }
