--- a/AcceptanceTests/appsettings.json
+++ b/AcceptanceTests/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ClientCredentials": {
+  "UserCredentials": {
     "Email": "someEmail@domain.com",
     "Password": "secret"
   },
