fix cardYield tests

--- a/AcceptanceTests/appsettings.json
+++ b/AcceptanceTests/appsettings.json
@@ -11,7 +11,7 @@
     "Password": "secret"
   },
   "ServiceSettings": {
-    "Url": "http://urlurlurl"
+    "Url": ""
   },
   "AllowedHosts": "*"
 }
