--- a/AcceptanceTests/Properties/launchSettings.json
+++ b/AcceptanceTests/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "UserCredentials__Email": "tomer@ribbon.com",
         "UserCredentials__Password": "password",
-        "ServiceSettings__Url": "localhost"
+        "ServiceSettings__Url": "https://localhost:5001"
       }
     }
   }
