--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -22,6 +22,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ETL\ETL.csproj" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="dotnet-format" />
   </Target>
