--- a/AcceptanceTests/AcceptanceTests.csproj
+++ b/AcceptanceTests/AcceptanceTests.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TimberyardClient\TimberyardClient.csproj" />
     <ProjectReference Include="..\WebService\WebService.csproj" />
   </ItemGroup>
 
