Add NewtonSoftJson as default serializer

--- a/ETL/appsettings.json
+++ b/ETL/appsettings.json
@@ -9,5 +9,12 @@
     "DbServer": "",
     "DbPassword": "",
     "DbUsername": ""
+  },
+  "UserCredentials": {
+    "Email": "someEmail@domain.com",
+    "Password": "secret"
+  },
+  "ServiceSettings": {
+    "Url": ""
   }
 }
