Acceptance Test for Card Yeild

--- a/WebService/Properties/launchSettings.json
+++ b/WebService/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard;",
+        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
         "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
         "DatabaseSettings__DbPassword": "timberyard_service",
         "DatabaseSettings__DbUsername": "timberyard_service"
@@ -26,7 +26,7 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard;",
+        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
         "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
         "DatabaseSettings__DbPassword": "timberyard_service",
         "DatabaseSettings__DbUsername": "timberyard_service",
