Add InMemoryRepository for integration tests

--- a/Timberyard-UnitTests/Properties/launchSettings.json
+++ b/Timberyard-UnitTests/Properties/launchSettings.json
@@ -7,7 +7,10 @@
         "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
         "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
         "DatabaseSettings__DbPassword": "timberyard_service",
-        "DatabaseSettings__DbUsername": "timberyard_service"
+        "DatabaseSettings__DbUsername": "timberyard_service",
+        "SMPTClientSettings__Host": "localhost",
+        "SMPTClientSettings__Port": "25",
+        "SMPTClientSettings__SenderAddress": "Timberyard@test.com"
       }
     }
   }
