--- a/Timberyard-UnitTests/appsettings.json
+++ b/Timberyard-UnitTests/appsettings.json
@@ -12,5 +12,10 @@
     "DbPassword": "",
     "DbUsername": ""
   },
+  "SMPTClientSettings": {
+    "Host": "",
+    "Port": 25,
+    "SenderAddress": ""
+  },
   "AllowedHosts": "*"
 }
