--- a/Timberyard-UnitTests/appsettings.json
+++ b/Timberyard-UnitTests/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "DatabaseSettings": {
-    "ConnectionString": "persistsecurityinfo=True;database=Timberyard;SslMode=none",
+    "ConnectionString": "persistsecurityinfo=True;database=Timberyard_Testing;SslMode=none",
     "DbServer": "",
     "DbPassword": "",
     "DbUsername": ""
