Add integration tests for checkAlarmcondition

--- a/ETLTests/ETLTests.csproj
+++ b/ETLTests/ETLTests.csproj
@@ -39,5 +39,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="dotnet-format" />
+	</Target>
+
 
 </Project>
