--- a/Timberyard-UnitTests/TimberyardTests.csproj
+++ b/Timberyard-UnitTests/TimberyardTests.csproj
@@ -41,4 +41,9 @@
     </None>
   </ItemGroup>
 
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="dotnet-format" />
+	</Target>
+
+
 </Project>
