for test authentication code from swagger

--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -13,9 +13,9 @@
     "DbUsername": ""
   },
   "SMPTClientSettings": {
-    "Host": "",
+    "Host": "localhost",
     "Port": 25,
-    "SenderAddress":  ""
+    "SenderAddress":  "Timberyard@ribbon.com"
   },
   "AllowedHosts": "*"
 }
