--- a/client-web-app/package.json
+++ b/client-web-app/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^27.2.1",
+    "ag-grid-react": "^27.2.1",
     "chart.js": "^3.6.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
