--- a/testing-DB-docker-image/Db/Dockerfile
+++ b/testing-DB-docker-image/Db/Dockerfile
@@ -2,13 +2,19 @@
 FROM mcr.microsoft.com/mssql/server:2019-latest
 USER root
 # Create work directory
-RUN mkdir -p /usr/work
-WORKDIR /usr/work
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
 # Copy all scripts into working directory
-COPY . /usr/work/
+COPY . /usr/src/app
+
+
+ENV SA_PASSWORD password123!
+ENV ACCEPT_EULA Y
+ENV MSSQL_PID Express
+
 
 # Grant permissions for the import-data script to be executable
-RUN chmod +x /usr/work/import-data.sh
+#RUN chmod +x /usr/work/import-data.sh
 EXPOSE 1433
 CMD /bin/bash ./entrypoint.sh
