--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,13 +13,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 3.1.x
     - name: Install formater
       run: dotnet tool install --global dotnet-format
     - name: Run formater
-      run: dotnet-format --check --verbosity diagnostic
+      run: $env:DOTNET_ROOT/tools/dotnet-format --check --verbosity diagnostic
 
   build:
     needs: linter
