Revert "remove format"
This reverts commit 2a77ed1cd44c89f79ab981d1bf836d76f1236662.

--- a/ETL/ETL.csproj
+++ b/ETL/ETL.csproj
@@ -49,5 +49,8 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="dotnet-format" />
+  </Target>
 
 </Project>
