Secret and refactoring

--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -12,10 +12,13 @@
     "DbPassword": "",
     "DbUsername": ""
   },
+  "AuthenticationSettings": {
+    "Secret":  ""
+  },
   "SMPTClientSettings": {
     "Host": "localhost",
     "Port": 25,
-    "SenderAddress":  "Timberyard@ribbon.com"
+    "SenderAddress": "Timberyard@ribbon.com"
   },
   "AllowedHosts": "*"
 }
