run and debug tests without Login

--- a/Timberyard-UnitTests/appsettings.json
+++ b/Timberyard-UnitTests/appsettings.json
@@ -12,6 +12,9 @@
     "DbPassword": "",
     "DbUsername": ""
   },
+  "AuthenticationSettings": {
+    "Secret": ""
+  },
   "SMPTClientSettings": {
     "Host": "",
     "Port": 25,
