--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -12,10 +12,13 @@
     "DbPassword": "",
     "DbUsername": ""
   },
+  "AuthenticationSettings": {
+    "Secret":  ""
+  },
   "SMPTClientSettings": {
-    "Host": "",
+    "Host": "localhost",
     "Port": 25,
-    "SenderAddress":  ""
+    "SenderAddress": "Timberyard@ribbon.com"
   },
   "AllowedHosts": "*"
 }
