Add default system admin

--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -13,12 +13,16 @@
     "DbUsername": ""
   },
   "AuthenticationSettings": {
-    "Secret":  ""
+    "Secret": ""
   },
-  "SMPTClientSettings": {
-    "Host": "localhost",
-    "Port": 25,
-    "SenderAddress": "Timberyard@ribbon.com"
+  "DefaultSystemAdmin": {
+    "Email": "",
+    "Password": ""
   },
-  "AllowedHosts": "*"
-}
+    "SMPTClientSettings": {
+      "Host": "localhost",
+      "Port": 25,
+      "SenderAddress": "Timberyard@ribbon.com"
+    },
+    "AllowedHosts": "*"
+  }
