--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -13,7 +13,8 @@
     "DbUsername": ""
   },
   "AuthenticationSettings": {
-    "Secret":  ""
+    "Secret": "",
+    "Minutes": 5
   },
   "SMPTClientSettings": {
     "Host": "localhost",
