--- a/Timberyard-UnitTests/Properties/launchSettings.json
+++ b/Timberyard-UnitTests/Properties/launchSettings.json
@@ -4,8 +4,8 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
-        "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
+        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard;",
+        "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS,8080",
         "DatabaseSettings__DbPassword": "timberyard_service",
         "DatabaseSettings__DbUsername": "timberyard_service",
         "SMPTClientSettings__Host": "localhost",
