--- a/AcceptanceTests/appsettings.json
+++ b/AcceptanceTests/appsettings.json
@@ -13,5 +13,11 @@
   "ServiceSettings": {
     "Url": ""
   },
+  "DatabaseSettings": {
+    "ConnectionString": "persistsecurityinfo=True;database=Timberyard_Testing;SslMode=none",
+    "DbServer": "",
+    "DbPassword": "",
+    "DbUsername": ""
+  },
   "AllowedHosts": "*"
 }
