--- a/AcceptanceTests/Properties/launchSettings.json
+++ b/AcceptanceTests/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "UserCredentials__Email": "admin@timberyard.rbbn.com",
-        "UserCredentials__Password": "Password!123",
+        "UserCredentials__Password": "Password123!",
         "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
         "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
         "DatabaseSettings__DbPassword": "timberyard_service",
