--- a/AcceptanceTests/Properties/launchSettings.json
+++ b/AcceptanceTests/Properties/launchSettings.json
@@ -4,8 +4,12 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "UserCredentials__Email": "tomer@ribbon.com",
-        "UserCredentials__Password": "password",
+        "UserCredentials__Email": "admin@timberyard.rbbn.com",
+        "UserCredentials__Password": "Password123!",
+        "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
+        "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
+        "DatabaseSettings__DbPassword": "timberyard_service",
+        "DatabaseSettings__DbUsername": "timberyard_service",
         "ServiceSettings__Url": "https://localhost:5001"
       }
     }
