default system admin fix & add more authentication testing

--- a/Timberyard-UnitTests/appsettings.json
+++ b/Timberyard-UnitTests/appsettings.json
@@ -20,5 +20,9 @@
     "Port": 25,
     "SenderAddress": ""
   },
+  "DefaultSystemAdmin": {
+    "Email": "",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
