--- a/Timberyard-UnitTests/Properties/launchSettings.json
+++ b/Timberyard-UnitTests/Properties/launchSettings.json
@@ -4,6 +4,8 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        "DefaultSystemAdmin__Email": "admin@timberyard.rbbn.com",
+        "DefaultSystemAdmin__Password": "Password123!",
         "DatabaseSettings__ConnectionString": "Initial Catalog=Timberyard_Testing;",
         "DatabaseSettings__DbServer": "LOCALHOST\\SQLEXPRESS",
         "DatabaseSettings__DbPassword": "timberyard_service",
