--- a/client-web-app/package.json
+++ b/client-web-app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^27.2.1",
     "ag-grid-react": "^27.2.1",
+    "axios": "^0.27.2",
     "chart.js": "^3.6.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
