--- a/ETL/appsettings.json
+++ b/ETL/appsettings.json
@@ -4,17 +4,17 @@
     "HandeledLogsDirectory": "",
     "FaultLogsDirectory": ""
   },
-  "DatabaseSettings": {
-    "ConnectionString": "persistsecurityinfo=True;database=Timberyard;SslMode=none",
-    "DbServer": "",
-    "DbPassword": "",
-    "DbUsername": ""
-  },
+    "DatabaseSettings": {
+        "ConnectionString": "Initial Catalog=Timberyard;",
+        "DbServer": "LOCALHOST",
+        "DbPassword": "etl_process",
+        "DbUsername": "etl_process"
+    },
   "UserCredentials": {
     "Email": "someEmail@domain.com",
     "Password": "secret"
   },
-  "ServiceSettings": {
-    "Url": ""
-  }
+    "ServiceSettings": {
+        "Url": "http://localhost:5000"
+    }
 }
