--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -8,7 +8,7 @@
     },
     "DatabaseSettings": {
         "ConnectionString": "Initial Catalog=Timberyard;",
-        "DbServer": "LOCALHOST\\SQLEXPRESS",
+        "DbServer": "LOCALHOST",
         "DbPassword": "timberyard_service",
         "DbUsername": "timberyard_service"
     },
@@ -17,7 +17,7 @@
         "Minutes": 5
     },
     "SMPTClientSettings": {
-        "Host": "localhost",
+        "Host": "mailhost.ecitele.com",
         "Port": 25,
         "SenderAddress": "Timberyard@ribbon.com"
     },
